[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vasim"
description = "Vertical Autoscaler Simulator Toolkit"
keywords = [
    "data analysis",
    "visualization",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Simulation",
    "Topic :: System",
]
license = { "file" = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
maintainers = [
    { name = "VASim Maintainers", email = "vasim-maintainers@service.microsoft.com" },
]

version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "cvxpy",
    "jsonargparse",
    "matplotlib",
    "numpy",
    "pandas",
    "plotnine",
    "python-dateutil",
    "requests",
    "sktime",
]
[project.optional-dependencies]
"dev" = [
    "autopep8",
    "flake8",
    "black",
    "isort",
    "pydocstringformatter",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "coverage",
    "pre-commit",
]

[project.urls]
# TODO:
#Documentation = "https://microsoft.github.io/vasim"
Repository = "https://github.com/microsoft/vasim"
Issues = "https://github.com/microsoft/vasim/issues"

# Tell setuptools where to find the package.
[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
minversion = "6.0"
# parallelize tests with xdist
# produce coverage report
addopts = "-n auto -s -v --cov=src/ --cov-fail-under=70 --cov-report=xml"

[tool.black]
line-length = 127
target-version = ["py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
py_version = 310
src_paths = ["src", "tests"]

[tool.pydocstringformatter]
write = true
exit-code = true
max-line-length = 127
style = ["pep257", "numpydoc"]
